// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a query=forward-create.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDNd",
          "parentName": "Jimmy Constraint",
        },
        "id": "WyJDaGlsZCIsM10=",
        "momParent": null,
        "name": "Johnny Q. Constraint",
      },
    },
  },
}
`;

exports[`a query=mixed-multi-level-insert.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "childrenByDadParentId": {
            "nodes": [
              {
                "id": "WyJDaGlsZCIsM10=",
                "name": "Sandra Day",
              },
              {
                "id": "",
                "name": "George Washington"
              },
              {
                "id": "",
                "name": "Martha Washington"
              }
            ],
            "totalCount": 3,
          },
          "id": "WyJQYXJlbnQiLDNd",
          "parentName": "John Q. Washington",
        },
        "id": "WyJDaGlsZCIsM10=",
        "name": "Sandra Day",
      },
    },
  },
}
`;

exports[`a query=reverse-create.graphql 1`] = `
{
  "data": {
    "createParent": null,
  },
  "errors": [
    [GraphQLError: $items must be a ListStep and $parent must be a PgInsertSingleStep or PgUpdateSingleStep],
  ],
}
`;
